syslog-ng (3.3.7+git20130103-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New snapshot, based on git commit 519d211
  * Use the standard /var/log/mail.{info,err,warn} location for the
    various mail-related logs. (Closes: #692056)
  * Do not forcibly remove the systemd service files, that code is not
    needed anymore.

 -- Gergely Nagy <algernon@madhouse-project.org>  Thu, 03 Jan 2013 14:31:57 +0100

syslog-ng (3.3.7-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream release.
  * Instead of installing systemd service file symlinks, install a
    conffile, that includes the real service file. (Closes: #690067)
  * Add Origin and Bugs fields to the control file.

 -- Gergely Nagy <algernon@madhouse-project.org>  Wed, 31 Oct 2012 07:57:37 +0100

syslog-ng (3.3.6.91-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Packaging synced with GCS.
  * New upstream release candidate + patches
    (based on git commit 768073c667a04f64fdc75ec17aed62f60c12da75)
  * Don't mark systemd symlinks in /etc as conffiles
    (Closes: #690067)

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 14 Oct 2012 13:14:53 +0200

syslog-ng (3.3.6-1) unstable; urgency=low

  * New upstream release:
    - fixes disconnect on charset decoding error when using UDP sources
      (closes: #674099),
    - use upstream, packaged ivykis.
  * Backport upstream fix of cfg-lexer to fix glob-based include order.

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Add NEWS.Debian, with a note about OpenSSL changing the default dir
    hashing from MD5 to SHA1, and its effect on syslog-ng users.
  * Fix build-indep and multiple builds in a row
  * Explicitly remove systemd unit and service files from /etc upon purge
    (closes: #674020).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Wed, 05 Sep 2012 01:57:50 +0200

syslog-ng (3.3.5-2) unstable; urgency=low
