@@ -1,5 +1,6 @@
 @version: 3.3
 @include "scl.conf"
+@include "`scl-root`/system/tty10.conf"
 
 # Syslog-ng configuration file, compatible with default Debian syslogd
 # installation.
@@ -65,7 +66,7 @@ destination d_console { usertty("root"); };
 
 # Virtual console.
 #
-destination d_console_all { file("/dev/tty10"); };
+destination d_console_all { file(`tty10`); };
 
 # The named pipe /dev/xconsole is for the nsole' utility.  To use it,
 # you must invoke nsole' with the -file' option:
