@@ -1,0 +1,1 @@
+@define tty10 "/dev/ttyva"
